Fri Mar 17 16:23:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/preferences-dialog.glade:
	  - Get rid of extra, useless widgets

Fri Mar 17 15:46:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-dialog.h:
	  - Whitespace nitpickery
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* data/preferences-dialog.glade:
	  - Fiddle a bit with UI and whitespace

Fri Mar 17 22:41:09 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* src/fe-gnome/apps_xchat.schemas.in:
	* src/fe-gnome/Makefile.am:
	* configure.ac:
	* data/spellcheck.png:
	* data/preferences-dialog.glade:
	* data/Makefile.am:
	* po/POTFILES.in:
	  - Add a preference page to configure spellchecking. We can now
	  disable it and select languages to be used. (#324921, #326436)

Tue Mar 14 13:59:23 GMT 2006  Daniel Drake <dsd@gentoo.org>

	* src/fe-gnome/about.c:
	  - Explicitly hide the about dialog on delete to prevent future crash.
	    (#334534)

Mon Mar 13 03:07:31 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/userlist-gui.c:
	* data/xchat-gnome-ui.xml:
	  - Improve the user context menu situation (#333473).

Mon Mar 13 02:24:10 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Hopefully fix clipboard and selection issues.

Sun Mar 12 11:28:54 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Clarify autojoin/autoconnect strings

Sun Mar 12 21:59:03 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Use theme-based colors for the nickname button to indicate away